<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".PageReplacementActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinner_select_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:elevation="8dp"
                android:padding="10dp"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etReferenceNumber"
                style="@style/Base_Field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_base_input_field"
                android:digits="@string/allow_digit_for_reference"
                android:hint="@string/edit_text_hint_ref_number"
                android:layout_marginTop="10dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_select_algorithm" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:text="@string/error_enter_valid_reference_numbers"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etReferenceNumber"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFrame"
                style="@style/Base_Field"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:autofillHints="Reference Number"
                android:background="@drawable/bg_base_input_field"
                android:hint="@string/edit_text_hint_frames"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:minHeight="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btnSubmit"
                app:layout_constraintTop_toBottomOf="@+id/etReferenceNumber" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_btn_add_delete"
                android:text="@string/text_btn_submit"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@+id/etFrame"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etReferenceNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:text="@string/error_enter_valid_frame"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFrame"/>

            <TextView
                android:id="@+id/tvOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorFrame"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:text="@string/text_output"
                android:layout_marginTop="20dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOutput">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/resultContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TableLayout
                        android:id="@+id/tableView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="25dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tableView">

                        <TextView
                            android:id="@+id/tvPages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/text_pages"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvFrames"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/text_frames"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvPages" />

                        <TextView
                            android:id="@+id/tvHits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/text_hit"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvFrames" />

                        <TextView
                            android:id="@+id/tvFaults"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/text_fault"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvHits" />

                        <TextView
                            android:id="@+id/tvHitRatio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/text_hit_ration"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvFaults" />

                        <TextView
                            android:id="@+id/tvMissRation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/text_miss_ration"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvHitRatio" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>