<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Bankers">

    <EditText
        android:id="@+id/proc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter number of processes"
        android:inputType="number"
        android:textColorHint="#243B55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter the semaphore value"
        android:inputType="number"
        android:textColorHint="#243B55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proc" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/sticky_Button"
        app:layout_constraintBottom_toTopOf="@+id/sticky_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="6dp"

                    android:layout_marginRight="6dp">

                    <TableRow

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_row_top_bg"

                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:weightSum="5"

                        >


                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/lato_bold"
                            android:gravity="center_horizontal"
                            android:text="PROCESS"
                            android:textAlignment="center"
                            android:textColor="@color/TableHeading"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/lato_bold"
                            android:gravity="center_horizontal"
                            android:text="ENTRY"
                            android:textAlignment="center"
                            android:textColor="@color/TableHeading"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/lato_bold"
                            android:gravity="center_horizontal"
                            android:text="BUFFER"
                            android:textAlignment="center"
                            android:textColor="@color/TableHeading"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/lato_bold"
                            android:gravity="center_horizontal"
                            android:text="FINISHED"
                            android:textAlignment="center"
                            android:textColor="@color/TableHeading"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                </TableLayout>
            </HorizontalScrollView>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/sticky_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_addRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"

                android:background="@drawable/background_btn_add_delete"
                android:fontFamily="@font/lato_bold"
                android:text="@string/add_process"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_deleteRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn_add_delete"
                android:fontFamily="@font/lato_bold"
                android:text="@string/delete_process"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn_reset"
                android:fontFamily="@font/lato_bold"
                android:text="@string/reset"

                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_Compute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/background_compute"
            android:elevation="8dp"
            android:fadeScrollbars="false"
            android:fontFamily="@font/lato_bold"
            android:text="Compute"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="normal" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>